# docs/swagger.yaml
@@ -163,7 +163,55 @@ paths:
     description: >-
       The REST endpoint/path used to list and create zero or more `transaction` entities.  This path
       contains a `GET` and `POST` operation to perform the list and create tasks, respectively.
-
+    get:
+      tags:
+        - transactions
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/transaction'
+              examples:
+                ' GET /transactions 200 response':
+                  value:
+                    accountFrom: 80734b3c6e1c40045b3ff1821eedadb63ef
+                    accountTo: 92c84bb50b65304f534480390cc90aafcbc
+                    amount: 100
+                    createdAt: '2021-10-28T10:56:20.898Z'
+                    currency: USD
+                    receiverName: Kristi Maask
+                    senderName: Karl-August
+                    status: Completed
+          description: 'List of all user''s transactions with accounts from, names from, sums and date.'
+        '400':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
+              examples:
+                Invalid Authorization header format:
+                  value:
+                    error: Invalid Authorization header format
+          description: Bad Request
+        '401':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
+              examples:
+                Missing Authorization header:
+                  value:
+                    error: Missing Authorization header
+                Invalid token:
+                  value:
+                    error: Invalid token
+          description: Unauthorized
+      security:
+        - Bearer: [ ]
+      operationId: gettransactions
+      summary: Returns list of transactions
+      description: 'Returns all transactions of user with accounts from, names from, sums and date.'
     post:
       requestBody:
         description: A new `transaction` to be created.
